# jubilant-barnacle

./: .gitignore  LICENSE  README.md  notebook.ipynb  pyproject.toml
sampled-data/: members.parquet
src/: __init__.py  __version__.py
src/analysis/: constants.py  main.py  utils.py
src/api/: __main__.py  client.py  constants.py  database.py
src/api/cli/: console.py  export_table.py  insert_members.py  insert_works.py  logs.py
src/api/models/: base.py  member.py  work.py
tests/: client_test.py  database_test.py  export_test.py  member_result.json  model_test.py
